--- a/style1.css
+++ b/style1.css
@@ -8,5 +8,8 @@
             background-color: rgb(255, 204, 255);
         }
             
-"font-family:Courier New"
-        
+p{
+ "font-family:Courier New"
+}
+
+P{color: rgb (255,255,255)
